# flag-maker

./: .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  postcss.config.json
pages/: _app.js  index.js  recents.js
pages/api/: flag.svg.js
pkg/: package.json  wasm_helpers.d.ts  wasm_helpers.js  wasm_helpers_bg.js  wasm_helpers_bg.wasm  wasm_helpers_bg.wasm.d.ts
styles/: Home.module.css  globals.css
wasm-helpers/: Cargo.toml
wasm-helpers/src/: lib.rs
