[package]
name = "wasm-helpers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bitvec = "0.22.3"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
log = "0.4.14"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
